--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  align-items: center;
 }
 
 h1,
@@ -35,4 +37,243 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  align-items: flex-end;
+  gap: 29px;
+  inline-size: 100%;
+  padding: 0 30px 30px 30px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.result__video-container {
+  position: relative;
+  inline-size: 711px;
+  block-size: 386px;
+  margin-bottom: 15px;
+}
+
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  inline-size: 711px;
+  align-items: flex-end;
+  padding: 0 0 5px 0;
+}
+
+.search-form__textfield {
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
+  border-left: none;
+  border-right: none;
+  background: none;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  inline-size: 225px;
+  color: #fff;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  width: fit-content;
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.search-form__checkbox-list{ 
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__label {
+  inline-size: fit-content;
+  cursor: pointer;
+  display: flex;
+  gap: 5px;
+  align-items: center; 
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.search-form__label:hover:has(.search-form__textfield) {
+  text-decoration: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__pseudo-checkbox {
+  border: 1px solid #fff;
+  inline-size:19px;
+  block-size: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  background-color: #FFF;
+  inline-size: 15px;
+  block-size: 15px;
+}
+
+.button {
+  inline-size: 194px;
+  block-size: 34px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  line-height: 21.6px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+}
+
+.button:active {
+  background: #545050;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.more-button {
+  width: 100%;
+}
+
+.content__details {
+  block-size: 534px;
+  inline-size: 399px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.title {
+  padding: 0 0 17px 0;
+  color: #FFF;
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70.5px;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  block-size: 298px;
+  inline-size: 399px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.content__list-item:not(:last-child) {
+  margin: 0 0 30px;
+}
+
+.content__card-link { 
+  margin: 3px;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.content__video-card-thumbnail {
+  inline-size: 194px;
+  block-size: 105px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  inline-size: 398px;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  text-transform: initial;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color:  #fff;
+  display: block;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
