--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,10 @@ ol {
   color: #fff;
 }
 
+.search-form__textfield:focus {
+  outline: none;
+}
+
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
@@ -180,7 +184,8 @@ ol {
 }
 
 .more-button {
-  width: 100%;
+  width: 99%;
+  margin: 0 3px 3px 3px;
 }
 
 .content__details {
@@ -221,6 +226,21 @@ ol {
 
 .content__card-link { 
   margin: 3px;
+  text-decoration: none;
+  color:  #fff;
+  display: block;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link:active {
+  background: #545050;
 }
 
 .content__card-link:hover {
@@ -234,7 +254,6 @@ ol {
 .content__video-card {
   display: flex;
   justify-content: space-between;
-  
 }
 
 .content__video-card-thumbnail {
@@ -254,18 +273,16 @@ ol {
   font-family: Oswald, sans-serif;
   text-decoration: none;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 192px;
 }
 
 .content__video-card-description {
   line-height: 16.2px;
   font-family: "Fira Sans Condensed", sans-serif;
   text-transform: initial;
-}
-
-.content__card-link {
-  text-decoration: none;
-  color:  #fff;
-  display: block;
 }
 
 .visually-hidden {
